# RoWifi-V4

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: dependabot.yml  renovate.json
.github/workflows/: lints.yml  main.yml
rowifi/: Cargo.toml
rowifi/src/: main.rs
rowifi/src/commands/: audit_log.rs  mod.rs
rowifi/src/commands/analytics/: mod.rs  register.rs
rowifi/src/commands/assetbinds/: delete.rs  mod.rs  new.rs
rowifi/src/commands/backups/: delete.rs  mod.rs  new.rs  restore.rs
rowifi/src/commands/custombinds/: delete.rs  mod.rs  new.rs
rowifi/src/commands/denylists/: custom.rs  delete.rs  group.rs  mod.rs  user.rs
rowifi/src/commands/events/: mod.rs  new.rs  view.rs
rowifi/src/commands/events/types/: mod.rs  new.rs
rowifi/src/commands/groupbinds/: delete.rs  mod.rs  new.rs
rowifi/src/commands/rankbinds/: delete.rs  mod.rs  new.rs
rowifi/src/commands/server/: mass_update.rs  mod.rs  serverinfo.rs
rowifi/src/commands/user/: info.rs  mod.rs  update.rs  verify.rs
rowifi/src/commands/user/accounts/: default.rs  delete.rs  mod.rs  switch.rs
rowifi/src/commands/user/update/: debug.rs  mod.rs
rowifi/src/utils/: mod.rs  update_user.rs
rowifi_cache/: Cargo.toml
rowifi_cache/src/: error.rs  event.rs  lib.rs  process.rs
rowifi_core/: Cargo.toml
rowifi_core/src/: custom.rs  error.rs  lib.rs
rowifi_core/src/assetbinds/: add.rs  delete.rs  mod.rs
rowifi_core/src/backups/: delete.rs  mod.rs  new.rs  restore.rs
rowifi_core/src/custombinds/: add.rs  delete.rs  evaluate.rs  mod.rs  parser.rs
rowifi_core/src/denylists/: add.rs  delete.rs
rowifi_core/src/events/: mod.rs  new.rs
rowifi_core/src/events/types/: add.rs
rowifi_core/src/groupbinds/: add.rs  delete.rs  mod.rs
rowifi_core/src/rankbinds/: add.rs  delete.rs  mod.rs
rowifi_core/src/user/: update.rs
rowifi_database/: Cargo.toml
rowifi_database/src/: error.rs  lib.rs
rowifi_derive/: Cargo.toml
rowifi_derive/src/: lib.rs
rowifi_framework/: Cargo.toml
rowifi_framework/src/: arguments.rs  context.rs  error.rs  handler.rs  lib.rs  prelude.rs  utils.rs
rowifi_framework/src/command/: builder.rs  mod.rs
rowifi_lemonsqueezy/: Cargo.toml
rowifi_lemonsqueezy/src/: error.rs  lib.rs  model.rs
rowifi_models/: Cargo.toml
rowifi_models/src/: analytics.rs  audit_log.rs  backup.rs  custom.rs  deny_list.rs  discord.rs  events.rs  guild.rs  id.rs  lib.rs  user.rs
rowifi_models/src/bind/: asset.rs  custom.rs  group.rs  mod.rs  rank.rs  template.rs  xp.rs
rowifi_models/src/roblox/: datastore.rs  group.rs  id.rs  inventory.rs  mod.rs  user.rs
rowifi_roblox/: Cargo.toml
rowifi_roblox/src/: error.rs  filter.rs  lib.rs  request.rs  route.rs
rowifi_roblox_models/: Cargo.toml
rowifi_roblox_models/src/: datastore.rs  id.rs  inventory.rs  lib.rs  universe.rs  user.rs
