[workspace]
members = [
    "rowifi", 
    "rowifi_cache", 
    "rowifi_core",
    "rowifi_database", 
    "rowifi_derive", 
    "rowifi_framework", 
    "rowifi_lemonsqueezy", 
    "rowifi_models", 
    "rowifi_roblox"
]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7" }
serde = { version = "1.0" }
serde_json = { version = "1" }
time = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", default-features = false }
tracing = "0.1"
twilight-http = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls-webpki-roots"] }
twilight-mention = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-model = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-standby = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-validate = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-util = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["builder"] }
