[package]
name = "rowifi"
version = "4.0.0"
edition = "2021"

[features]
default = ["tower"]
tower = ["dep:rowifi_tower"]

[dependencies]
axum = { workspace = true }
deadpool-redis = { version = "0.14" }
ed25519-dalek = { version = "2" }
hex = { version = "0.4" }
itertools = { version = "0.12" }
redis = { version = "0.24", default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
rowifi_cache = { path = "../rowifi_cache" }
rowifi_core = { path = "../rowifi_core" }
rowifi_database = { path = "../rowifi_database" }
rowifi_framework = { path = "../rowifi_framework" }
rowifi_models = { path = "../rowifi_models" }
rowifi_roblox = { path = "../rowifi_roblox" }
rowifi_tower = { branch = "main", git = "https://github.com/RoWifi-HQ/rowifi_tower", optional = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["auth", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http = { workspace = true }
twilight-mention = { workspace = true }
twilight-standby = { workspace = true }