[package]
name = "rowifi"
version = "4.3.1"
edition = "2021"

[features]
default = ["tower"]
tower = ["dep:rowifi_tower"]

[dependencies]
axum = { workspace = true }
dashmap = { version = "6" }
ed25519-dalek = { version = "2" }
futures-util = { version = "0.3" }
hex = { version = "0.4" }
image = { version = "0.25", default-features = false, features = ["png"] }
itertools = { workspace = true }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "datetime", "line_series", "ttf"] }
redis = { version = "0.27", default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }
rowifi_cache = { path = "../rowifi_cache" }
rowifi_core = { path = "../rowifi_core" }
rowifi_database = { path = "../rowifi_database" }
rowifi_framework = { path = "../rowifi_framework" }
rowifi_models = { path = "../rowifi_models" }
rowifi_roblox = { path = "../rowifi_roblox" }
rowifi_tower = { branch = "main", git = "https://github.com/RoWifi-HQ/rowifi_extras", optional = true, version = "4" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.6", features = ["auth", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-http = { workspace = true }
twilight-mention = { workspace = true }
twilight-standby = { workspace = true }
twilight-util = { workspace = true, features = ["link"] }