[package]
name = "rowifi_cache"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
deadpool-redis = { version = "0.13" }
rmp-serde = { version = "1.1" }
rowifi_models = { path = "../rowifi_models" }
tracing = { version = "0.1" }