[package]
name = "rowifi_core"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["custombinds"]
custombinds = ["dep:rowifi_script"]

[dependencies]
itertools = { workspace = true }
rowifi_cache = { path = "../rowifi_cache" }
rowifi_database = { path = "../rowifi_database" }
rowifi_models = { path = "../rowifi_models" }
rowifi_roblox = { path = "../rowifi_roblox" }
rowifi_script = { branch = "main", git = "https://github.com/RoWifi-HQ/rowifi_extras", version = "4", optional = true }
serde = { workspace = true }
time = { workspace = true }
twilight-http = { workspace = true }
twilight-validate = { workspace = true }