[package]
name = "rowifi_core"
version = "4.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
nom = { version = "7" }
regex = { version = "1" }
rowifi_cache = { path = "../rowifi_cache" }
rowifi_database = { path = "../rowifi_database" }
rowifi_models = { path = "../rowifi_models" }
rowifi_roblox = { path = "../rowifi_roblox" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
twilight-http = { workspace = true }
twilight-validate = { workspace = true }