[package]
name = "rowifi_framework"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
rowifi_cache = { path = "../rowifi_cache" }
rowifi_database = { path = "../rowifi_database" }
rowifi_derive = { path = "../rowifi_derive" }
rowifi_models = { path = "../rowifi_models" }
rowifi_roblox = { path = "../rowifi_roblox" }
serde_json = { version = "1" }
time = { version = "0.3", default-features = false, features = ["std"] }
tower = { version = "0.4", default-features = false }
tracing = "0.1"
twilight-http = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls-webpki-roots"] }
twilight-validate = { branch = "main", git = "https://github.com/twilight-rs/twilight" }
twilight-util = { branch = "main", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["builder"] }