[package]
name = "rowifi_framework"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
rowifi_cache = { path = "../rowifi_cache" }
rowifi_core = { path = "../rowifi_core" }
rowifi_database = { path = "../rowifi_database" }
rowifi_derive = { path = "../rowifi_derive" }
rowifi_models = { path = "../rowifi_models" }
rowifi_roblox = { path = "../rowifi_roblox" }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
tower = { workspace = true }
tracing = { workspace = true }
twilight-http = { workspace = true }
twilight-mention = { workspace = true }
twilight-standby = { workspace = true }
twilight-validate = { workspace = true }
twilight-util = { workspace = true }