[package]
name = "rowifi_models"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2", features = ["serde"] }
bytes = { version = "1.5" }
lazy_static = { version = "1.4" }
time = { workspace = true, features = ["serde", "parsing", "formatting"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-time-0_3"] }
twilight-model = { workspace = true }
regex = { version = "1.10" }
serde = { workspace = true }
serde_repr = { version = "0.1" }