[package]
name = "rowifi_models"
version = "4.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2", features = ["serde"] }
bytes = { version = "1.5" }
chrono = { workspace = true, features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
twilight-model = { workspace = true }
rowifi_roblox_models = { path = "../rowifi_roblox_models" }
regex = { version = "1.10" }
serde = { workspace = true }
serde_repr = { version = "0.1" }
serde_json = { workspace = true, features = ["raw_value"] }