[package]
name = "rowifi_roblox"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0", default-features = false, features = ["client", "http2"] }
hyper-rustls = { version = "0.26", default-features = false, features = ["webpki-tokio", "http1", "http2"] }
hyper-util = { version = "0", features = ["client"] }
http-body-util = "0.1"
itertools = { version = "0.12" }
rowifi_models = { path = "../rowifi_models" }
serde = { version = "1.0" }
serde_json = { workspace = true }
tracing = { workspace = true }