[package]
name = "rowifi_roblox"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { workspace = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["ring", "webpki-tokio", "http1", "http2"] }
hyper-util = { version = "0", features = ["client"] }
http-body-util = "0.1"
itertools = { workspace = true }
rowifi_models = { path = "../rowifi_models" }
serde = { version = "1.0" }
serde_json = { workspace = true }
tracing = { workspace = true }