[package]
name = "rowifi_roblox_models"
version = "4.2.0"
edition = "2024"

[features]
default = ["postgres"]
postgres = ["dep:postgres-types"]

[dependencies]
bytes = { version = "1.5" }
chrono = { workspace = true, features = ["serde"] }
postgres-types = { version = "0.2", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
serde = { workspace = true, features = ["derive"] }